[package]
name = "rapberry"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
askama = "0.14.0"
axum = "0.8.6"
bytes = "1.10.1"
chrono = { version = "0.4.42", features = ["serde"] }
config = "0.15.18"
dialoguer = "0.12.0"
dotenvy = "0.15.7"
hyper = { version = "1.8.0", features = ["full"] }
indicatif = "0.18.2"
owo-colors = "4.2.3"
regex = "1.12.2"
reqwest = { version = "0.12.24", features = ["json"] }
rustls = "0.23.35"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
tower-http = { version = "0.6.6", features = ["fs", "timeout", "trace"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
